--- a/app/views/login.xml
+++ b/app/views/login.xml
@@ -7,6 +7,12 @@
 				<View id="facebookBtn">
 					<Label id="facebookBtnText">sign in with Facebook</Label>
 				</View>
+				<View id="loginBtn">
+					<Label id="loginBtnText">Sign in with Email</Label>
+				</View>
+				<View id="signUpBtn">
+					<Label id="signUpBtnText">Sign up for Betbattle</Label>
+				</View>
 			</View>
 			<View id="view1" class="scrollView">
 				<Label id="viewOneLabel" class="tutorialInfoLabel">Choose create challenge in the menu to get started!</Label>
