--- a/app/views/login.xml
+++ b/app/views/login.xml
@@ -7,8 +7,8 @@
 				<View id="facebookBtn">
 					<Label id="facebookBtnText">sign in with Facebook</Label>
 				</View>
-				<View id="signUpBtn">
-					<Label id="signUpBtnText">Register with Email</Label>
+				<View id="registerBtn">
+					<Label id="registerBtnText">Register with Email</Label>
 				</View>
 				<View id="loginBtn">
 					<Label id="loginBtnText">Sign in</Label>
