--- a/app/views/profile.xml
+++ b/app/views/profile.xml
@@ -1,4 +1,5 @@
 <Alloy>
-	<Window class="container" id="profile">
+	<Window class="container" id="profileWin">
+		<TableView id="table"></TableView>
 	</Window>
 </Alloy>
